2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* configure.nexusware: remove any later language
	* debian/mscript_postinst.in: remove any later language
	* debian/mscript_postrm.in: remove any later language
	* debian/mscript_preinst.in: remove any later language
	* debian/mscript_prerm.in: remove any later language
	* debian/strss7-core.postinst.in: remove any later language
	* debian/strss7-core.postrm.in: remove any later language
	* debian/strss7-devel.preinst.in: remove any later language
	* debian/strss7-doc.postinst.in: remove any later language
	* debian/strss7-doc.preinst.in: remove any later language
	* debian/strss7-doc.prerm.in: remove any later language
	* debian/strss7-init.postinst.in: remove any later language
	* debian/strss7-init.postrm.in: remove any later language
	* debian/strss7-init.preinst.in: remove any later language
	* debian/strss7-init.prerm.in: remove any later language
	* debian/strss7-lib.preinst.in: remove any later language
	* debian/strss7-source.preinst.in: remove any later language
	* debian/strss7-util.preinst.in: remove any later language
	* doc/drafts/fixup: remove any later language
	* doc/drafts/isua/Makefile: remove any later language
	* doc/drafts/m2pa/Makefile: remove any later language
	* doc/drafts/m2ua/Makefile: remove any later language
	* doc/drafts/m3pa/Makefile: remove any later language
	* doc/drafts/m3ua/Makefile: remove any later language
	* doc/drafts/sctp/Makefile: remove any later language
	* doc/drafts/sua/Makefile: remove any later language
	* doc/drafts/tua/Makefile: remove any later language
	* doc/drafts/ua/Makefile: remove any later language
	* doc/specs/cci/cci.me: remove any later language
	* doc/specs/cci/cci.texi: remove any later language
	* src/include/ss7/capi.h: remove any later language