@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.21 $) $Date: 2007/03/25 19:00:40 $
+ @(#) $RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.22 $) $Date: 2007/06/20 06:52:02 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/25 19:00:40 $ by $Author: brian $
+ Last Modified $Date: 2007/06/20 06:52:02 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: sl_x100p.c,v $
+ Revision 0.9.2.22  2007/06/20 06:52:02  brian
+ - updates for Fedora 7 and 2.6.21 kernel
+
  Revision 0.9.2.21  2007/03/25 19:00:40  brian
  - changes to support 2.6.20-1.2307.fc5 kernel
 
@@ -79,10 +82,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.21 $) $Date: 2007/03/25 19:00:40 $"
+#ident "@(#) $RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.22 $) $Date: 2007/06/20 06:52:02 $"
 
 static char const ident[] =
-    "$RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.21 $) $Date: 2007/03/25 19:00:40 $";
+    "$RCSfile: sl_x100p.c,v $ $Name:  $($Revision: 0.9.2.22 $) $Date: 2007/06/20 06:52:02 $";
 
 /*
  *  This is an SL (Signalling Link) kernel module which provides all of the
@@ -96,6 +99,11 @@ static char const ident[] =
 #include <linux/ioport.h>
 #include <asm/io.h>
 #include <asm/dma.h>
+
+#ifndef KBUILD_MODNAME
+#define KBUILD_MODNAME "streams-x100p-sl"
+#endif
+
 #include <linux/pci.h>
 
 #include <linux/interrupt.h>
@@ -117,7 +125,7 @@ static char const ident[] =
 
 #define SL_X100P_DESCRIP	"E/T100P-SS7: SS7/SL (Signalling Link) STREAMS DRIVER."
 #define SL_X100P_EXTRA		"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
-#define SL_X100P_REVISION	"OpenSS7 $RCSfile: sl_x100p.c,v $ $Name:  $ ($Revision: 0.9.2.21 $) $Date: 2007/03/25 19:00:40 $"
+#define SL_X100P_REVISION	"OpenSS7 $RCSfile: sl_x100p.c,v $ $Name:  $ ($Revision: 0.9.2.22 $) $Date: 2007/06/20 06:52:02 $"
 #define SL_X100P_COPYRIGHT	"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define SL_X100P_DEVICE		"Supports the T/E100P-SS7 T1/E1 PCI boards."
 #define SL_X100P_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
