@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.26 $) $Date: 2007/03/25 19:00:43 $
+ @(#) $RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.27 $) $Date: 2007/06/20 06:52:19 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/03/25 19:00:43 $ by $Author: brian $
+ Last Modified $Date: 2007/06/20 06:52:19 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: x100p-ss7.c,v $
+ Revision 0.9.2.27  2007/06/20 06:52:19  brian
+ - updates for Fedora 7 and 2.6.21 kernel
+
  Revision 0.9.2.26  2007/03/25 19:00:43  brian
  - changes to support 2.6.20-1.2307.fc5 kernel
 
@@ -73,10 +76,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.26 $) $Date: 2007/03/25 19:00:43 $"
+#ident "@(#) $RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.27 $) $Date: 2007/06/20 06:52:19 $"
 
 static char const ident[] =
-    "$RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.26 $) $Date: 2007/03/25 19:00:43 $";
+    "$RCSfile: x100p-ss7.c,v $ $Name:  $($Revision: 0.9.2.27 $) $Date: 2007/06/20 06:52:19 $";
 
 /*
  *  This is an SL (Signalling Link) kernel module which provides all of the
@@ -90,6 +93,11 @@ static char const ident[] =
 #include <linux/ioport.h>
 #include <asm/io.h>
 #include <asm/dma.h>
+
+#ifndef KBUILD_MODNAME
+#define KBUILD_MODNAME "streams-x100p"
+#endif
+
 #include <linux/pci.h>
 
 #include <linux/interrupt.h>
@@ -106,7 +114,7 @@ static char const ident[] =
 
 #define X100P_DESCRIP		"E/T100P-SS7: SS7/SL (Signalling Link) STREAMS DRIVER."
 #define X100P_EXTRA		"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
-#define X100P_REVISION		"OpenSS7 $RCSfile: x100p-ss7.c,v $ $Name:  $ ($Revision: 0.9.2.26 $) $Date: 2007/03/25 19:00:43 $"
+#define X100P_REVISION		"OpenSS7 $RCSfile: x100p-ss7.c,v $ $Name:  $ ($Revision: 0.9.2.27 $) $Date: 2007/06/20 06:52:19 $"
 #define X100P_COPYRIGHT		"Copyright (c) 1997-2006 OpenSS7 Corporation.  All Rights Reserved."
 #define X100P_DEVICE		"Supports the T/E100P-SS7 T1/E1 PCI boards."
 #define X100P_CONTACT		"Brian Bidulock <bidulock@openss7.org>"
