@@ -2,6 +2,10 @@
 
 	* doc/manual/news.texi: new distro/kernel support
 	* doc/manual/prerequisites.texi: new distro/kernel support
+	* src/modules/x400p-ss7/sl_x100p.c: updates for Fedora 7 and 2.6.21
+	* src/modules/x400p-ss7/sl_x400p.c: updates for Fedora 7 and 2.6.21
+	* src/modules/x400p-ss7/x100p-ss7.c: updates for Fedora 7 and 2.6.21
+	* src/modules/x400p-ss7/x400p-ss7.c: updates for Fedora 7 and 2.6.21
 
 2007-06-16  Brian Bidulock  <bidulock@openss7.org>
 
